Prevent the server status from wrapping

--- a/frontend/src/components/MainDisplay.css
+++ b/frontend/src/components/MainDisplay.css
@@ -9,8 +9,16 @@
     flex-direction: column;
 }
 
+.mutation-options {
+    display: none;
+}
+
 .server-status {
     position: fixed;
     bottom: 0;
     right: 0;
+    white-space: nowrap;
+    width: max-content;
+    min-width: 200px;
+    margin-right: 1%;
 }
